[gd_scene load_steps=9 format=3 uid="uid://cinqovg23332w"]

[ext_resource type="Script" path="res://sim/ui/components/tool_bar.gd" id="2_8uvif"]
[ext_resource type="ButtonGroup" uid="uid://cb36e1rvybq66" path="res://sim/ui/components/misc/cursor_button_group.tres" id="2_bowka"]
[ext_resource type="Texture2D" uid="uid://bunw3qg3dldhy" path="res://asset/element/tool/select.svg" id="2_llgij"]
[ext_resource type="Texture2D" uid="uid://dmlxy4if3btyw" path="res://asset/element/tool/pan.svg" id="3_ysfiq"]
[ext_resource type="Texture2D" uid="uid://ft6cn1ic57da" path="res://asset/element/tool/create.svg" id="4_3fw7w"]
[ext_resource type="Texture2D" uid="uid://bo6v2qnv4d1yn" path="res://asset/element/tool/link.svg" id="5_xnuya"]
[ext_resource type="Texture2D" uid="uid://0a75h8i62sj" path="res://asset/element/tool/delete.svg" id="6_mjbfx"]
[ext_resource type="Texture2D" uid="uid://brij48b26ph0j" path="res://asset/element/tool/grid.svg" id="8_6422q"]

[node name="tool_bar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
size_flags_horizontal = 3
script = ExtResource("2_8uvif")

[node name="tool_container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="select_button" type="Button" parent="tool_container"]
layout_mode = 2
tooltip_text = "Select"
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_bowka")
icon = ExtResource("2_llgij")
flat = true

[node name="pan_button" type="Button" parent="tool_container"]
visible = false
layout_mode = 2
tooltip_text = "Pan"
toggle_mode = true
button_group = ExtResource("2_bowka")
icon = ExtResource("3_ysfiq")
flat = true

[node name="create_button" type="Button" parent="tool_container"]
layout_mode = 2
tooltip_text = "Create State"
toggle_mode = true
button_group = ExtResource("2_bowka")
icon = ExtResource("4_3fw7w")
flat = true

[node name="link_button" type="Button" parent="tool_container"]
visible = false
layout_mode = 2
tooltip_text = "Create Transitions"
toggle_mode = true
button_group = ExtResource("2_bowka")
icon = ExtResource("5_xnuya")
flat = true

[node name="delete_button" type="Button" parent="tool_container"]
layout_mode = 2
tooltip_text = "Delete"
toggle_mode = true
button_group = ExtResource("2_bowka")
icon = ExtResource("6_mjbfx")
flat = true

[node name="VSeparator" type="VSeparator" parent="tool_container"]
layout_mode = 2

[node name="grid_button" type="Button" parent="tool_container"]
layout_mode = 2
tooltip_text = "Grid"
toggle_mode = true
button_pressed = true
icon = ExtResource("8_6422q")
flat = true

[connection signal="pressed" from="tool_container/select_button" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="tool_container/pan_button" to="." method="_on_pan_button_pressed"]
[connection signal="pressed" from="tool_container/create_button" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="tool_container/link_button" to="." method="_on_link_button_pressed"]
[connection signal="pressed" from="tool_container/delete_button" to="." method="_on_delete_button_pressed"]
[connection signal="toggled" from="tool_container/grid_button" to="." method="_on_grid_button_toggled"]
